[package]
name = "fhir-rs"
version = "0.1.0"
authors = ["Oliver Rickard <ocrickard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
actix_web = ["actix-web", "futures-util", "actix-rt"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = {version = "3.3.2", optional = true}
futures-util = {version = "0.3.8", optional = true}
actix-rt = {version = "1.1.1", optional = true}

[dev-dependencies]
actix-rt = {version = "1.1.1"}
actix-web = {version = "3.3.2"}
futures-util = {version = "0.3.8"}
